<resources>
    <string name="app_name">ВПомощь</string>
    <string name="navigation_drawer_open">Открыть боковое меню</string>
    <string name="navigation_drawer_close">Закрыть боковое меню</string>
    <string name="contentDescriptionPhotoInMyProfile">Фотография профиля</string>
    <string name="contentDescriptionPhotoOfSpecialist">Фотография специалиста</string>
    <string name="contentDescriptionButtonSendRequest">Отправить запрос специалисту</string>
    <string name="contentDescriptionOpenProfile">Открыть окно профиля</string>
    <string name="contentDescriptionPersonalData">Кнопка для заполнения личных данных</string>
    <string name="contentDescriptionWorkExperience">Кнопка для заполнения опыта работы</string>
    <string name="contentDescriptionButtonAddWorkExperience">Кнопка для добавления опыта работы</string>
    <string name="contentDescriptionEducation">Кнопка для заполнения сведений об образовании</string>
    <string name="contentDescriptionCourses">Кнопка для заполнения данных о курсах, которые Вы проходили</string>
    <string name="contentDescriptionProjects">Кнопка для заполнения данных о проектов, в которых Вы принимали участие</string>
    <string name="contentDescriptionLanguages">Кнопка для заполнения данных об иностранных языках</string>
    <string name="contentDescriptionButtonAddEducation">Кнопка для добавления сведений об образовании</string>
    <string name="contentDescriptionMainSkills">Кнопка для заполнения ключевых навыков</string>
    <string name="contentDescriptionAdditionalInformation">Кнопка для заполнения дополнительной информации</string>
    <string name="contentDescriptionButtonAttach">Кнопка для прикрепления документа</string>
    <string name="my_profile">Мой профиль</string>
    <string name="my_navigator">Главная</string>
    <string name="questionary">Анкетирование</string>
    <string name="menu_articles">Главная</string>
    <string name="menu_specialists">Онлайн-куратор</string>
    <string name="menu_tests">Онлайн-диагностика</string>
    <string name="menu_resume">Мое резюме</string>
    <string name="menu_courses">Образование</string>
    <string name="menu_tech_support">Тех.поддержка</string>
    <string name="menu_exit">Выход</string>
    <string name="error_connection">Ошибка подключения</string>
    <string name="check_connection">Проверьте подключение к Интернету и повторите попытку</string>
    <string name="try_request">Повторить</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="check_data">Проверьте корректность введенных данных</string>
    <string name="check_passwords">Ваши пароли не совпадают</string>
    <string name="check_count_of_blocks">Можно добавить не больше 10 блоков</string>
    <string name="hint_questionary">Подсказка</string>
    <string name="fill_fields_questionary">Вам необходимо заполнить все поля анкетирования. От вас требуются четкие и подробные ответы по каждой теме. Данные ответы будут доступны специалистам для анализа.</string>
    <string name="size_of_file">Размер файла не должен превышать 1МБ</string>
    <string name="hint_resume">Подсказка</string>
    <string name="fill_fields_resume">Для создания резюме Вам необходимо перейти в каждый раздел и заполнить поля. Некоторые поля являются необязательными. Если Вы их не заполните, то в резюме они не будут отображены. После заполнения полей нажмите на "Создать PDF" - резюме автоматически сохранится в формате .pdf и перед Вами откроется итоговый документ</string>
    <string name="login">Войти</string>
    <string name="email_or_phone_login">Почта или номер телефона</string>
    <string name="password_login">Пароль</string>
    <string name="register_here">Регистрация</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="Write_email">Пожалуйста, укажите email, который Вы использовали для входа в приложение. На ваш email будет отправлен пароль.</string>
    <string name="send">Отправить</string>
    <string name="important_fields">Поля, отмеченные *, обязательны для заполнения</string>
    <string name="refresh_photo">Обновить фотографию</string>
    <string name="remove_photo">Удалить фотографию</string>
    <string name="refresh">Обновить профиль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="password_register">Пароль*</string>
    <string name="confirm_password_register">Повторите пароль*</string>
    <string name="change_password">Изменить пароль</string>
    <string name="input_old_password">Введите старый пароль</string>
    <string name="input_new_password">Введите новый пароль</string>
    <string name="confirm_new_password">Подтвердите новый пароль</string>
    <string name="email">Почта</string>
    <string name="email_register">Почта*</string>
    <string name="number_of_phone">Номер телефона</string>
    <string name="number_of_phone_register">Номер телефона*</string>
    <string name="surname">Фамилия</string>
    <string name="surname_register">Фамилия*</string>
    <string name="name">Имя</string>
    <string name="name_register">Имя*</string>
    <string name="middlename">Отчество</string>
    <string name="middlename_register">Отчество*</string>
    <string name="register_number_check">Проверка данных</string>
    <string name="register_number">Регистрационный номер</string>
    <string name="check_number">Проверить</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="date_of_birth_register">Дата рождения*</string>
    <string name="direction_child_home">Введите название организации для детей-сирот и укажите населенный пункт, в котором она находится (если не пребывали в организации, поставить прочерк)</string>
    <string name="name_of_child_home">Организация для детей-сирот</string>
    <string name="direction_registration_address">Введите адрес прописки (если прописки нет, поставить прочерк)</string>
    <string name="registration_address">Адрес прописки</string>
    <string name="type_of_flat_from_factual_address">Жилищные условия</string>
    <string name="request_type_of_flat_from_factual_address">Выберите вариант, соответствующий Вашим жилищным условиям</string>
    <string name="direction_factual_address">Введите фактический адрес места проживания</string>
    <string name="factual_address">Фактический адрес проживания</string>
    <string name="sex_of_user">Пол</string>
    <string name="sex_of_user_register">Пол*</string>
    <string name="subject_of_country_my_profile">Название региона</string>
    <string name="subject_of_country_register">Название региона*</string>
    <string name="city_my_profile">Название населенного пункта</string>
    <string name="city_register">Название населенного пункта*</string>
    <string name="agreement_about_processing_personal_data">Согласие на обработку персональных данных*</string>
    <string name="link_for_reading_document"><u>Ознакомление с документом</u></string>
    <string name="create_request">Формирование запроса</string>
    <string name="search_specialist">Поиск специалистов</string>
    <string name="go_to_next_activity">Продолжить</string>
    <string name="request_choose_help">Выберите необходимую помощь из представленного перечня</string>
    <string name="request_choose_specialist">Вы хотите обратиться к конкретному специалисту?</string>
    <string name="place_of_living">Место проживания</string>
    <string name="subject_of_country">Регион:</string>
    <string name="city">Населенный пункт:</string>
    <string name="create_request_hint">Подсказка</string>
    <string name="create_request_message">Если Вам необходимо изменить регион или населенный пункт проживания, перейдите в Ваш профиль и измените данные</string>
    <string name="list_of_specialist">Список найденных специалистов</string>
    <string name="list_of_request">Список запросов</string>
    <string name="type_of_request">Тип:</string>
    <string name="title_status_of_request">Сведения о запросе</string>
    <string name="Message">Введите сообщение</string>
    <string name="back">Назад</string>
    <string name="my_messages">Мои сообщения</string>
    <string name="speciality">Категория специалиста:</string>
    <string name="type_of_help">Требуемая помощь:</string>
    <string name="psychologist_request">Психолого-педагогическая помощь в решении личных и профессиональных вопросов</string>
    <string name="lawyer_request">Юридическая помощь в решении вопросов с жильем, законом, обращением в прокуратуру, суд и судебным приставам</string>
    <string name="household_request">Помощь в решении бытовых вопросов</string>
    <string name="fullname_of_specialist">Специалист:</string>
    <string name="workhours_of_specialist">Часы работы:</string>
    <string name="workphone_of_specialist">Рабочий телефон:</string>
    <string name="text_of_request_for_specialist">Текст запроса:</string>
    <string name="text_for_button_about_problem">Вы получили ответ по Вашему запросу?</string>
    <string name="problem_was_solved">Вопрос решен</string>
    <string name="problem_wasnt_solved">Вопрос не решен</string>
    <string name="button_yes">Да</string>
    <string name="button_no">Нет</string>
    <string name="message_check_age">Вам исполнилось 18 лет? При выборе Нет для дальнейшей регистрации Вам потребуется помощь Вашего законного представителя</string>
    <string name="create_resume">Создание резюме</string>
    <string name="create_pdf">Создать PDF</string>
    <string name="save_resume">Сохранить</string>
    <string name="personal_data">Личные данные</string>
    <string name="describe_career_objective">Какую должность Вы хотите занимать?</string>
    <string name="describe_salary">Какой доход рассматриваете?(в рублях)</string>
    <string name="describe_employment">Занятость</string>
    <string name="describe_schedule">График работы</string>
    <string name="describe_business_trips">Готовность к командировкам</string>
    <string name="describe_moving">Готовность к переезду</string>
    <string name="describe_marital_status">Cемейное положение</string>
    <string name="describe_having_children">Есть дети</string>
    <string name="work_experience">Опыт работы</string>
    <string name="describe_old_organization">Название организации</string>
    <string name="describe_old_position">Занимаемая должность</string>
    <string name="describe_old_responsibility">Ваши обязанности</string>
    <string name="describe_old_employment">Занятость</string>
    <string name="describe_start_of_work_period">Начало работы (месяц и год)</string>
    <string name="describe_end_of_work_period">Оконачание работы (месяц и год)</string>
    <string name="describe_work_now">продолжаю работать</string>
    <string name="education">Образование</string>
    <string name="languages">Иностранные языки</string>
    <string name="courses">Курсы</string>
    <string name="projects">Проекты</string>
    <string name="main_skills">Ключевые навыки</string>
    <string name="describe_basic_skills">Расскажите про Ваши основные навыки</string>
    <string name="describe_computer_skills">Выберите Ваш уровень владения компьютером</string>
    <string name="describe_program">Укажите программы, с которыми Вы умеете работать</string>
    <string name="describe_military_service">Служба в армии</string>
    <string name="choose_drivers_licences">Выберите категории водительских прав, которые есть у Вас</string>
    <string name="category_A">Категория А</string>
    <string name="category_B">Категория B</string>
    <string name="category_BE">Категория BE</string>
    <string name="category_C">Категория C</string>
    <string name="category_CE">Категория CE</string>
    <string name="category_D">Категория D</string>
    <string name="category_DE">Категория DE</string>
    <string name="category_M">Категория M</string>
    <string name="category_Tb_and_Tm">Категории Tb и Tm</string>
    <string name="additional_information">Дополнительно</string>
</resources>