<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:padding="@dimen/common_padding"
    tools:context=".ConsultantCompleteRequest">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                style="@style/ImageViewInLogin"
                android:layout_marginBottom="@dimen/marginBottom"/>
            <TextView
                style="@style/TextStyle"
                android:text="@string/fullname_of_specialist"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/specialist_fullname"
                style="@style/TextStyle"/>
            <TextView
                style="@style/TextStyle"
                android:text="@string/speciality"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/speciality_of_specialist"
                style="@style/TextStyle"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/TextStyle"
                    android:text="@string/workhours_of_specialist"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/specialist_workhours"
                    style="@style/TextStyle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/TextStyle"
                    android:text="@string/workphone_of_specialist"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/specialist_workphone"
                    style="@style/TextStyle"/>
            </LinearLayout>
            <TextView
                style="@style/TextStyle"
                android:text="@string/type_of_help"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/type_of_help"
                style="@style/TextStyle"/>
            <TextView
                style="@style/TextStyle"
                android:text="@string/text_of_request_for_specialist"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/specialist_text_of_request"
                style="@style/TextStyle"/>
            <TextView
                style="@style/TextStyle"
                android:text="@string/text_for_button_about_problem"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/marginTop">
                <Button
                    android:id="@+id/btnSuccessSolution"
                    style="@style/ButtonStyleLeft"
                    android:text="@string/problem_was_solved"/>
                <Button
                    android:id="@+id/btnFailedSolution"
                    style="@style/ButtonStyleRight"
                    android:text="@string/problem_wasnt_solved"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBarConsultantStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />
</FrameLayout>