<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="@dimen/common_padding">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="@dimen/marginBottom">

        <EditText
            android:id="@+id/etOldOrganization"
            style="@style/EditTextResume"
            android:hint="@string/describe_old_organization"/>

        <EditText
            android:id="@+id/etOldPosition"
            style="@style/EditTextResume"
            android:hint="@string/describe_old_position"/>

        <EditText
            android:id="@+id/etOldResponsibility"
            style="@style/EditTextResume"
            android:hint="@string/describe_old_responsibility"/>

        <TextView
            android:id="@+id/tvOldEmployment"
            style="@style/TextStyleBold"
            android:text="@string/describe_old_employment"/>
        <Spinner
            android:id="@+id/spOldEmployment"
            style="@style/SpinnerStyle"/>

        <LinearLayout
            android:id="@+id/llStartOfWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvStartOfWork"
                style="@style/TextStyleBold"
                android:text="@string/describe_start_of_work_period"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/spStartOfWorkPeriodMonth"
                    style="@style/SpinnerStyle"/>
                <Spinner
                    android:id="@+id/spStartOfWorkPeriodYear"
                    style="@style/SpinnerStyle"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/tvEndOfWork"
            style="@style/TextStyleBold"
            android:text="@string/describe_end_of_work_period"/>
        <LinearLayout
            android:id="@+id/llEndOfWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/spEndOfWorkPeriodMonth"
                style="@style/SpinnerStyle"/>
            <Spinner
                android:id="@+id/spEndOfWorkPeriodYear"
                style="@style/SpinnerStyle"/>
        </LinearLayout>
        <CheckBox
            android:id="@+id/cbWorkNow"
            style="@style/CheckBoxStyle"
            android:text="@string/describe_work_now"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@android:color/white"
        android:backgroundTint="@color/color_for_floating_button"
        android:src="@drawable/ic_delete"
        android:layout_gravity="center_vertical"
        app:fabSize="mini"/>

</LinearLayout>